Fix: alignment in section 1

--- a/style.css
+++ b/style.css
@@ -52,19 +52,44 @@ p {
     margin-right: 30%;
 }
 
-.info-image {
+.section-1 {
     width: 100%;
 }
 
-.info-image div {
+.section-1 div {
     position: relative;
     float: left;
     width: 50%;
     clear: none;
 }
 
-.info h1 {
-    padding-inline: 19%;
+.info{
+    text-align: center;
+}
+
+#inner-info {
+    overflow: hidden;
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    padding: 10px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.description{
+    height: auto;
+    margin: 0 auto;
+    padding: 10px;
+    position: relative;    
+    flex-direction: column;
+    justify-content: center;
+}
+
+.description h1 {
+    text-align: left;    
 }
 
 .info p {
@@ -73,22 +98,34 @@ p {
 }
 
 #labels-1 {
-    text-align: center;
-    width: 100%;
-    margin-top: 6%;
-    margin-left: 10%;
-    margin-right: 10%;
+    display: inline-block;
+    margin: 0 auto;    
 }
 
-#labels-1 div {
-    display: inline-flex;
-    float: left;
-    width: 50%
+#labels-1 ul {
+    padding: 0;
+    list-style-type: none;
 }
+
+
+#labels-1 li {
+    list-style: none;
+    display: inline-block;
+    padding: 20px;
+}
+
+#labels-1 .icon-bg-y {
+    background: rgba(255, 208, 18, 0.15);
+    padding: 2px;
+    margin: 0;
+    width: fit-content;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
 
 #labels-1 span {
     color: #ffd012;
-    margin-right: 20px;
     display: inline-block;
 }
 
@@ -99,36 +136,41 @@ p {
 }
 
 #schedule-label{
-    padding-top: 25px;
-    padding-left: 20%;
+    margin: 0 auto;
+}
+
+#schedule-label {
+    padding-top: 0px;
+    /*padding-left: 20%;*/
     color: #1f3e72;
 }
 
-#schedule-label span{
+#schedule-label span {
     padding-right: 10px;
     color: #2444c3;
 }
 
-#schedule-label label{
+#schedule-label label {
     font-size: 20px;
     font-weight: bold;
 }
 
 .bg-image {
-    padding-top: 5%;
+    padding-top: 8%;
     background-image: linear-gradient(to bottom right, #109ce7, #3359cc);
 }
 
 .bg-image img {
     display: block;
+    height: 500px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .submit-div {
-    left: 15%;
+    left: 25%;
     width: 85%;
-    bottom: 50px;
+    bottom: 130px;
     border-radius: 10px;
     padding: 30px;
     position: absolute;
@@ -136,10 +178,10 @@ p {
     background: rgba(255, 255, 255, 0.8);
     z-index: 1;
     box-shadow: 5px 5px 10px grey;
-    vertical-align: middle;  
+    vertical-align: middle;
 }
 
-.submit-div label {    
+.submit-div label {
     vertical-align: middle;
 }
 
@@ -148,7 +190,7 @@ p {
 }
 
 .submit-div .submit-div-row {
-    width: 75%;    
+    width: 75%;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
@@ -178,33 +220,33 @@ p {
     flex: 1 0 auto;
     -webkit-align-self: auto;
     -ms-flex-item-align: auto;
-    align-self: auto;    
+    align-self: auto;
 }
 
-.submit-div-cell span{
+.submit-div-cell span {
     padding-right: 10px;
     color: #2444c3;
 }
 
-.submit-div-cell .label-1st-row{
+.submit-div-cell .label-1st-row {
     padding-right: 10px;
     color: #6d7b93;
 }
 
-.label-2nd-row{
+.label-2nd-row {
     padding-left: 34px;
     color: #1f3e72;
     opacity: 1.0 !important;
 }
 
-.submit-div #submit-div-col-2 {      
+.submit-div #submit-div-col-2 {
     width: 25%;
-    display: inline-block;    
+    display: inline-block;
     position: relative;
 }
 
-#submit-div-col-2 .button-style{
-    position:absolute;
-    left:60%;
-    transform: translate(-50%,0%);
+#submit-div-col-2 .button-style {
+    position: absolute;
+    left: 60%;
+    transform: translate(-50%, 0%);
 }
